alignment issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
   font: 1em/1.618 Inter, sans-serif;
 
   display: flex;
-  align-items: center;
   justify-content: center;
   
   min-height: 100vh;
